Event basic align issue fixed

--- a/src/CSS/AddEvent.css
+++ b/src/CSS/AddEvent.css
@@ -82,19 +82,22 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   gap: 15px;
   position: relative;
-  max-width: 450px;
+  margin-bottom: 10px;
+  /* max-width: 450px; */
+  /* width: 850px; */
 }
 
 .event-image2 {
-  width: 100px;
-  height: 100px;
+  width: 320px;
+  height: 320px;
   border-radius: 10px;
   object-fit: cover;
 }
 
 .event-info2 {
   flex: 1;
-  line-height: 0.5;
+  text-align: justify;
+  /* line-height: 1.3; */
 }
 
 .event-title {
@@ -107,7 +110,7 @@
 .event-location {
   font-size: 14px;
   color: #666;
-  line-height: 1;
+  /* line-height: 1; */
 }
 
 .event-options {
